add 20250304 20250322 change index

--- a/index.html
+++ b/index.html
@@ -217,7 +217,30 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1742535036318" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="30">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1743137809213" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<a href="./posts/20250322.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="posts\images\20240322.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+🎓 2024年度 卒業・修了式
+</h5>
+<div class="card-text listing-description">
+2024年度の卒業式，修了式がありました． 本研究室からは学士9名が卒業，修士1名が修了されました．おめでとうございます．
+</div>
+<div class="card-attribution card-text-small justify">
+<div class="listing-author">
+
+</div>
+<div class="listing-date">
+Mar 22, 2025
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="1" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1742535036318" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="30">
 <a href="./posts/20250304.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250304.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -240,7 +263,32 @@ Mar 4, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-date-sort="1739804400000" data-listing-file-modified-sort="1742534266714" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="2" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1743140082036" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="24">
+<a href="./posts/20250304_1.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top">
+<img loading="lazy" src="./posts/images/20250525_2.webp" class="thumbnail-image card-img" style="height: 150px;">
+</p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+🕺MSCS2025にて竹ノ下，西田が発表しました
+</h5>
+<div class="card-text listing-description">
+大阪工業大学で行われた， 第12回 制御部門マルチシンポジウム にて，B4の竹ノ下とM2の西田が研究発表を行いました．
+</div>
+<div class="card-attribution card-text-small justify">
+<div class="listing-author">
+
+</div>
+<div class="listing-date">
+Mar 4, 2025
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="3" data-listing-date-sort="1739804400000" data-listing-file-modified-sort="1742534266714" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20250218.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250218.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -263,7 +311,7 @@ Feb 18, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-date-sort="1738162800000" data-listing-file-modified-sort="1742534266714" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="4">
+<div class="g-col-1" data-index="4" data-listing-date-sort="1738162800000" data-listing-file-modified-sort="1742534266714" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="4">
 <a href="./posts/20250130.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250130.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -286,7 +334,7 @@ Jan 30, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-date-sort="1734361200000" data-listing-file-modified-sort="1742534266713" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
+<div class="g-col-1" data-index="5" data-listing-date-sort="1734361200000" data-listing-file-modified-sort="1742534266713" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
 <a href="./posts/20241217.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -311,7 +359,7 @@ Dec 17, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-date-sort="1733410800000" data-listing-file-modified-sort="1742534266713" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="6" data-listing-date-sort="1733410800000" data-listing-file-modified-sort="1742534266713" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./posts/20241206.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -336,7 +384,7 @@ Dec 6, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
+<div class="g-col-1" data-index="7" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
 <a href="./posts/20241116.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -359,7 +407,7 @@ Nov 16, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
+<div class="g-col-1" data-index="8" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
 <a href="./posts/20241009.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20241009.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -382,7 +430,7 @@ Oct 9, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
+<div class="g-col-1" data-index="9" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
 <a href="./posts/20240719.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240719.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -405,7 +453,7 @@ Jul 19, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
+<div class="g-col-1" data-index="10" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
 <a href="./posts/20240628.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -430,7 +478,7 @@ Jun 28, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="9" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="g-col-1" data-index="11" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
 <a href="./posts/20240525.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -455,7 +503,7 @@ May 25, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="10" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
+<div class="g-col-1" data-index="12" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
 <a href="./posts/20240524.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240524_1.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -478,7 +526,7 @@ May 24, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="11" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="g-col-1" data-index="13" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <a href="./posts/20240515.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -501,7 +549,7 @@ May 15, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="12" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="14" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20240322.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240322.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -524,7 +572,7 @@ Mar 22, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="13" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
+<div class="g-col-1" data-index="15" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1742534266706" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
 <a href="./posts/20240318.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -549,7 +597,7 @@ Mar 18, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="14" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1742534266703" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
+<div class="g-col-1" data-index="16" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1742534266703" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
 <a href="./posts/20231221.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20231221.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -590,14 +638,15 @@ No matching items
 <section id="graduate-students" class="level3">
 <h3 data-anchor-id="graduate-students">Graduate Students</h3>
 <ul>
-<li>M2　1名</li>
-<li>M1　6名</li>
+<li>D1　1名</li>
+<li>M2　6名</li>
+<li>M1　4名</li>
 </ul>
 </section>
 <section id="undergraduate-students" class="level3">
 <h3 data-anchor-id="undergraduate-students">Undergraduate Students</h3>
 <ul>
-<li>B4　9名</li>
+<li>B4　7名</li>
 </ul>
 </section>
 </div>
