--- a/index.html
+++ b/index.html
@@ -217,10 +217,12 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1743141090964" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1743660874871" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./posts/20250322.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<p class="card-img-top">
+<img loading="lazy" src="./posts/images/20250322.jpg" class="thumbnail-image card-img" style="height: 150px;">
+</p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
 🎓 2024年度 卒業・修了式
@@ -263,11 +265,11 @@ Mar 4, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1743140082036" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="24">
+<div class="g-col-1" data-index="2" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1743661172423" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
 <a href="./posts/20250304_1.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
-<img loading="lazy" src="./posts/images/20250525_2.webp" class="thumbnail-image card-img" style="height: 150px;">
+<img loading="lazy" src="./posts/images/20250304_2.jpg" class="thumbnail-image card-img" style="height: 150px;">
 </p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
