--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Mar 4, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1743661172423" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="g-col-1" data-index="2" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1743661530868" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="19">
 <a href="./posts/20250304_1.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -276,7 +276,7 @@ Mar 4, 2025
 🕺MSCS2025にて竹ノ下，西田が発表しました
 </h5>
 <div class="card-text listing-description">
-大阪工業大学で行われた， 第12回 制御部門マルチシンポジウム にて，B4の竹ノ下とM2の西田が研究発表を行いました．
+大阪工業大学で行われた， 第12回計測自動制御学会制御部門マルチシンポジウム にて，B4の竹ノ下とM2の西田が研究発表を行いました．
 </div>
 <div class="card-attribution card-text-small justify">
 <div class="listing-author">
