--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ No matching items
 <section id="graduate-students" class="level3">
 <h3 data-anchor-id="graduate-students">Graduate Students</h3>
 <ul>
-<li>D1　1名</li>
+<li>D1　<a href="https://sites.google.com/view/s-nishida-ja/ホーム">Shumpei Nishida</a></li>
 <li>M2　6名</li>
 <li>M1　4名</li>
 </ul>
