Add for Nishida academic conference

--- a/index.html
+++ b/index.html
@@ -225,7 +225,30 @@ window.Quarto = {
 <h2 data-anchor-id="news">News</h2>
 <div id="listing-listofnews" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-date-sort="1756825200000" data-listing-file-modified-sort="1758177439447" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
+<div class="g-col-1" data-index="0" data-listing-date-sort="1762527600000" data-listing-file-modified-sort="1763294830314" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="11">
+<a href="./posts/20251116.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="posts\images\20251116.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+🕺第68回自動制御連合講演会にて西田が発表しました
+</h5>
+<div class="card-text listing-description">
+名古屋大学で開催された，第68回自動制御連合講演会にて, 西田が下記成果を発表しました．
+</div>
+<div class="card-attribution card-text-small justify">
+<div class="listing-author">
+
+</div>
+<div class="listing-date">
+Nov 8, 2025
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="1" data-listing-date-sort="1756825200000" data-listing-file-modified-sort="1758872768659" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
 <a href="./posts/20250918.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250918.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -248,7 +271,7 @@ Sep 3, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-date-sort="1748271600000" data-listing-file-modified-sort="1758175673618" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
+<div class="g-col-1" data-index="2" data-listing-date-sort="1748271600000" data-listing-file-modified-sort="1758175673618" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
 <a href="./posts/20250527.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250527.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -271,7 +294,7 @@ May 27, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1758175673618" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="3" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1758175673618" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./posts/20250322.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -296,7 +319,7 @@ Mar 22, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1758175673617" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="30">
+<div class="g-col-1" data-index="4" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1758175673617" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="30">
 <a href="./posts/20250304.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250304.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -319,7 +342,7 @@ Mar 4, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1758175673617" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="19">
+<div class="g-col-1" data-index="5" data-listing-date-sort="1741014000000" data-listing-file-modified-sort="1758175673617" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="19">
 <a href="./posts/20250304_1.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -344,7 +367,7 @@ Mar 4, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-date-sort="1739804400000" data-listing-file-modified-sort="1758175673617" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="6" data-listing-date-sort="1739804400000" data-listing-file-modified-sort="1758175673617" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20250218.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250218.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -367,7 +390,7 @@ Feb 18, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-date-sort="1738162800000" data-listing-file-modified-sort="1758175673616" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="4">
+<div class="g-col-1" data-index="7" data-listing-date-sort="1738162800000" data-listing-file-modified-sort="1758175673616" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="4">
 <a href="./posts/20250130.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20250130.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -390,7 +413,7 @@ Jan 30, 2025
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-date-sort="1734361200000" data-listing-file-modified-sort="1758175673616" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
+<div class="g-col-1" data-index="8" data-listing-date-sort="1734361200000" data-listing-file-modified-sort="1758175673616" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="34">
 <a href="./posts/20241217.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -415,7 +438,7 @@ Dec 17, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-date-sort="1733410800000" data-listing-file-modified-sort="1758175673616" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="9" data-listing-date-sort="1733410800000" data-listing-file-modified-sort="1758175673616" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./posts/20241206.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -440,7 +463,7 @@ Dec 6, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="9" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
+<div class="g-col-1" data-index="10" data-listing-date-sort="1731682800000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="5">
 <a href="./posts/20241116.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -463,7 +486,7 @@ Nov 16, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="10" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
+<div class="g-col-1" data-index="11" data-listing-date-sort="1728399600000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="13">
 <a href="./posts/20241009.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20241009.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -486,7 +509,7 @@ Oct 9, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="11" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
+<div class="g-col-1" data-index="12" data-listing-date-sort="1721314800000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
 <a href="./posts/20240719.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240719.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -509,7 +532,7 @@ Jul 19, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="12" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
+<div class="g-col-1" data-index="13" data-listing-date-sort="1719500400000" data-listing-file-modified-sort="1758175673615" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="33">
 <a href="./posts/20240628.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -534,7 +557,7 @@ Jun 28, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="13" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1758175673614" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="g-col-1" data-index="14" data-listing-date-sort="1716562800000" data-listing-file-modified-sort="1758175673614" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
 <a href="./posts/20240525.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -559,7 +582,7 @@ May 25, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="14" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1758175673614" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
+<div class="g-col-1" data-index="15" data-listing-date-sort="1716476400000" data-listing-file-modified-sort="1758175673614" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="18">
 <a href="./posts/20240524.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240524_1.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -582,7 +605,7 @@ May 24, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="15" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1758175673614" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="g-col-1" data-index="16" data-listing-date-sort="1715698800000" data-listing-file-modified-sort="1758175673614" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <a href="./posts/20240515.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -605,7 +628,7 @@ May 15, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="16" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1758175673613" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
+<div class="g-col-1" data-index="17" data-listing-date-sort="1711033200000" data-listing-file-modified-sort="1758175673613" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="2">
 <a href="./posts/20240322.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="posts\images\20240322.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -628,11 +651,11 @@ Mar 22, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="17" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1758175673613" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
+<div class="g-col-1" data-index="18" data-listing-date-sort="1710687600000" data-listing-file-modified-sort="1758175673613" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="14">
 <a href="./posts/20240318.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
-<img loading="lazy" src="./posts/images/20240318.jpg" class="thumbnail-image card-img" style="height: 150px;">
+<img loading="lazy" data-src="./posts/images/20240318.jpg" class="thumbnail-image card-img" style="height: 150px;">
 </p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
@@ -653,7 +676,7 @@ Mar 18, 2024
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="18" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1758175673613" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
+<div class="g-col-1" data-index="19" data-listing-date-sort="1703084400000" data-listing-file-modified-sort="1758175673613" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="17">
 <a href="./posts/20231221.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img data-src="posts\images\20231221.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
